[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "libprg"
description = "program library"
version = "5"
authors = [
    {name = "libprg",email = "libbotx@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/libprg"
"bugs" = "https://github.com/botlibx/libprg/issues"
"source" = "https://github.com/botlibx/libprg"


[tool.setuptools]
packages = [
    'prg',
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/libprg" = [
    "README.rst",
]


[tool.setuptools.data-files]
"share/doc/libbot" = [
    "README.rst",
]


"libbot/modules" = [
    'modules/__init__.py',
    'modules/cmd.py',
    'modules/fnd.py',
    'modules/irc.py',
    'modules/log.py',
    'modules/mbx.py',
    'modules/mdl.py',
    'modules/mod.py'.
    'modules/mod.py',
    'modules/req.py',
    'modules/rss.py',
    'modules/shp.py',
    'modules/sts.py',
    'modules/tdo.py',
    'modules/thr.py',
    'modules/udp.py',
    'modules/wsd.py',
    'modules/wsh.py'
]


[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
